--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "mongoose": "^8.7.0",
-    "mongoose-timestamps": "^0.0.1"
+    "mongoose-timestamps": "^0.0.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
